--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -3,15 +3,22 @@ version: '3'
 volumes:
   pg_data:
   static:
+  media:
 
 services:
   db:
     image: postgres:13
+    env_file: .env
     volumes:
       - pg_data:/var/lib/postgresql/data
   backend:
     build: ./backend/
     env_file: .env
+    volumes:
+      - static:/backend_static
+      - media:/app/media
+    depends_on:
+      - db
   frontend:
     env_file: .env
     build: ./frontend/
@@ -24,4 +31,7 @@ services:
     ports:
       - 9000:80
     volumes:
-      - static:/static
+      - static:/staticfileskitty
+      - media:/var/www/media
+    depends_on:
+      - backend
