--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -171,9 +171,9 @@ jobs:
         to: ${{ secrets.TELEGRAM_TO }}
         token: ${{ secrets.TELEGRAM_TOKEN }}
         message:|
-      🚀 Деплой успешно выполнен!
-      👤 Автор: ${{ github.actor }}
-      📝 Коммит: ${{ github.event.commits[0].message }}
-      🔗 Ссылка: https://github.com/${{ github.repository }}/commit/${{ github.sha }}
-      🏷️ Ветка: ${{ github.ref_name }}      
+         Деплой успешно выполнен!
+         Автор: ${{ github.actor }}
+         Коммит: ${{ github.event.commits[0].message }}
+         Ссылка: https://github.com/${{ github.repository }}/commit/${{ github.sha }}
+         Ветка: ${{ github.ref_name }}      
           
