--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -170,10 +170,9 @@ jobs:
       with:
         to: ${{ secrets.TELEGRAM_TO }}
         token: ${{ secrets.TELEGRAM_TOKEN }}
-        message:|
-         Деплой успешно выполнен!
-         Автор: ${{ github.actor }}
-         Коммит: ${{ github.event.commits[0].message }}
-         Ссылка: https://github.com/${{ github.repository }}/commit/${{ github.sha }}
-         Ветка: ${{ github.ref_name }}      
-          
+        message: |
+          Деплой успешно выполнен!
+          Автор: ${{ github.actor || 'N/A' }}
+          Коммит: ${{ github.event.commits[0].message || 'No commit message' }}
+          Ссылка: https://github.com/${{ github.repository }}/commit/${{ github.sha }}
+          Ветка: ${{ github.ref_name || github.ref }}
